# KapkandexDisk

./: .flake8  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: disk_workflow.yml  market_workflow.yml
alembic/: env.py
alembic/versions/: 8704339ddb08_first_migration.py  9d9523ca2369_эfirst_migration.py  c346efd55665_first_migration.py
app/: main.py
app/api/: routers.py  validators.py
app/api/endpoints/: __init__.py  system_item.py  system_item_history.py
app/core/: base.py  config.py  constants.py  db.py
app/crud/: __init__.py  base.py  system_item.py
app/models/: __init__.py  abstract_base.py  system_item.py  system_item_history.py
app/schemas/: system_item.py
app/utils/: convert_date_to_utc_zulu.py  convertors.py  get_response.py  update_create_items.py  update_create_objects.py  update_create_process.py
app/validators/: date.py  item.py
tests/: conftest.py  test_base_item_schemas.py  test_endpoints_response.py  test_import_packages.py
tests/fixtures/: date.py  items.py  response_body.py
tests/test_schemas/: test_base_item_schemas.py
