[tool.poetry]
name = "kapkandexdisk"
version = "0.1.0"
description = ""
authors = ["Andrey Kapkaev <kapkaew@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.8.1"
aiosqlite = "^0.17.0"
asyncpg = "^0.26.0"
fastapi = "^0.83.0"
uvicorn = {extras = ["standart"], version = "^0.18.3"}
watchgod = "^0.8.2"
SQLAlchemy = "^1.4.41"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"
pytz = "^2022.2.1"
pytest = "^7.1.3"
requests = "^2.28.1"
pytest-asyncio = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
